# CI-CD_projects

1_project/taskops-cicd/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  wsgi.py
1_project/taskops-cicd/app/: __init__.py  config.py  database.py  routes.py
1_project/taskops-cicd/app/templates/: base.html  create_task.html  index.html  tasks.html
1_project/taskops-cicd/tests/: conftest.py  test_database.py  test_health.py  test_routes.py
2_project/kubeops-gitops/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
2_project/kubeops-gitops/.github/workflows/: ci.yml  image-release.yml
2_project/kubeops-gitops/app/: __init__.py  main.py  models.py  settings.py
2_project/kubeops-gitops/argocd/: application.yaml
2_project/kubeops-gitops/docs/: architecture.md  gitops.md  helm.md  kubernetes.md  monitoring.md  security.md  troubleshooting.md
2_project/kubeops-gitops/docs/screenshots/: README.md
2_project/kubeops-gitops/helm/kubeops/: Chart.yaml  values-dev.yaml  values-prod.yaml  (+1 more)
2_project/kubeops-gitops/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
2_project/kubeops-gitops/monitoring/: README.md  grafana-dashboard-notes.md
2_project/kubeops-gitops/scripts/: check-health.ps1  check-tools.ps1  cleanup.ps1  create-kind-cluster.ps1  deploy-helm.ps1  deploy-k8s.ps1  port-forward.ps1
2_project/kubeops-gitops/tests/: conftest.py  test_health.py  test_notes.py  test_validation.py
(+9 files in other folders)
